# chessbot2

./: .gitignore  .gitmodules  40_15_gain_uho.sh  CHANGELOG.md  Cargo.toml  README.md  bench.txt  bruh.txt  build.sh  compare_stash14.sh  extract_tune.py  gain.sh  gain_uho.sh  get_book.sh  get_tests.sh  main.txt  nnue.md  non_regression.sh  release.toml  self_play_fen_10056655919696597722.csv  self_play_fen_10534723928728579432.csv  self_play_fen_11588634862489219323.csv  self_play_fen_13289993946865447435.csv  self_play_fen_13334783862016736355.csv  self_play_fen_16955388605409818458.csv  self_play_fen_17689652318466423366.csv  self_play_fen_5640719901510406931.csv  self_play_fen_6165470152656115667.csv  self_play_fen_7947658185862542222.csv  tune.sh
chessbot2-lichess/: Cargo.toml  bruh.txt
chessbot2-lichess/src/: api.rs  log.rs  main.rs
chessbot2-uci/: Cargo.toml
chessbot2-uci/src/: client.rs  main.rs  uci.rs
dysprosium-lichess/: Cargo.toml
dysprosium-lichess/src/: api.rs  log.rs  main.rs
dysprosium-uci/: Cargo.toml
dysprosium-uci/src/: client.rs  main.rs  uci.rs
nnue/: Cargo.toml
nnue/src/: generic.rs  lib.rs  x86_64_avx2.rs
src/: debug.rs  eval.rs  game.rs  lib.rs  move_order.rs  node.rs  search.rs  see.rs  selfplay.rs  shared_table.rs  sync.rs  tables.rs  trans_table.rs  tune.rs
tuner/: Cargo.toml
tuner/src/: main.rs
