[workspace]
members = ["chess", "chessbot2-lichess","chessbot2-uci"]

[package]
name = "chessbot2"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7"
bytemuck = { version = "1.20.0", features = ["derive"] }
chess = { version = "4.0.0", path = "chess" }
fxhash = "0.2.1"

[profile.release-debuginfo]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3
