[workspace]
members = ["chessbot2-lichess","chessbot2-uci", "tuner"]

[package]
name = "chessbot2"
version = "0.1.0"
edition = "2024"

[dependencies]
arrayvec = "0.7"
# TODO: remove this because it isnt really used that much
bytemuck = { version = "1.20.0", features = ["derive"] }
chess = { version = "4.0.0", path = "chess" }
fastrand = "2.3.0"
# TODO: remove this because it isnt really used that much
fxhash = "0.2.1"
include_optional = "1.0.1"
parking_lot = "0.12.3"
postcard = { version = "1.1.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.5.1"

[profile.release-debuginfo]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
debug = true
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 3
debug = true
panic = "abort"

[profile.test]
opt-level = 3

[profile.dev.build-override]
opt-level = 3
[profile.release.build-override]
opt-level = 3
[profile.test.build-override]
opt-level = 3

[package.metadata.release]
pre-release-replacements = [
    { file="CHANGELOG.md", search="# Unreleased", replace="# {{version}}" },
    { file="CHANGELOG.md", search="<!-- updated by cargo-release -->", replace="<!-- updated by cargo-release -->\n\n# Unreleased" },
]
