[package]
name = "chessbot2-lichess"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
chess = "3.2.0"
chessbot2 = { version = "0.1.0", path = ".." }
futures-util = "0.3.31"
json = "0.12.4"
reqwest = { version = "0.12.9", features = ["stream"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
