[package]
name = "chessbot2-lichess"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.9.0"
chess = { version = "4.0.0", path = "../chess" }
chessbot2 = { version = "0.1.0", path = ".." }
futures-util = "0.3.31"
reqwest = { version = "0.12.9", features = ["stream"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
